All non-layout styles fixed and other Aesthetics

--- a/DH_BugTracker/Views/Account/ResendEmailConfirmation.cshtml
+++ b/DH_BugTracker/Views/Account/ResendEmailConfirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@model DH_BugTracker.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
+    Layout = null;
 }
 
 <h2>@ViewBag.Title</h2>
