--- a/DH_BugTracker/Views/Manage/ChangePassword.cshtml
+++ b/DH_BugTracker/Views/Manage/ChangePassword.cshtml
@@ -3,39 +3,45 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title</h2>
-
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4 style="padding-left:10px">Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control txtBoxs" })
+    <div class="row">
+        <div class="col-md-5">
+            <div class="card">
+                <div class="card-header card-header-primary">
+                    <h4 class="card-title">@ViewBag.Title</h4>
+                    <p class="card-category" style="padding-left:10px">New Password Form</p>
+                </div>
+                <div class="card-body">
+                    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.OldPassword, new { @class = "col-md control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", style = "padding-left:5px" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", style = "padding-left:5px" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md control-label" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", style = "padding-left:5px" })
+                            </div>
+                        </div>
+                        <div class="col my-auto" style="padding-top:20px">
+                            <a href="~/Manage/EditUser"><u><b>Back to profile</b></u></a>
+                            <button type="submit" class="btn allbtn pull-right">Change Password</button>
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control txtBoxs" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control txtBoxs" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn allbtn">Change Password</button>
-            @Html.ActionLink("Back to Profile", "EditUser",null,new { style = "padding-left:10px"})
-        </div>
-    </div>
-}
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
