--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -42,14 +42,12 @@
                         <span class="focus-input100-1"></span>
                         <span class="focus-input100-2"></span>
                     </div>
-
                     <div class="wrap-input100 rs1 validate-input" data-validate="Password is required">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control input100", placeholder = "Password" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         <span class="focus-input100-1"></span>
                         <span class="focus-input100-2"></span>
                     </div>
-
                     <div class="container-login100-form-btn m-t-20 form-group">
                         <button type="submit" class="login100-form-btn">
                             Sign in
@@ -65,7 +63,7 @@
                         </span>
 
                         <a class="txt2 hov1">
-                            @Html.ActionLink("Password?", "ForgotPassword")
+                            <b>@Html.ActionLink("Password?", "ForgotPassword")</b>
                         </a>
                     </div>
 
@@ -75,7 +73,7 @@
                         </span>
 
                         <a class="txt2 hov1">
-                            @Html.ActionLink("Sign Up", "Register")
+                            <b>@Html.ActionLink("Sign Up", "Register")</b>
                         </a>
                     </div>
                 }
