--- a/DH_BugTracker/Views/Account/Register.cshtml
+++ b/DH_BugTracker/Views/Account/Register.cshtml
@@ -82,7 +82,7 @@
                         </span>
 
                         <a class="txt2 hov1">
-                            @Html.ActionLink("Sign In", "Login")
+                            <b>@Html.ActionLink("Sign In", "Login")</b>
                         </a>
                     </div>
                 }
