finished ticket stuff

--- a/DH_BugTracker/Views/Account/Login.cshtml
+++ b/DH_BugTracker/Views/Account/Login.cshtml
@@ -33,7 +33,7 @@
                 {
                     @Html.AntiForgeryToken()
                     <span class="login100-form-title p-b-33">
-                        Bug Tracker Login
+                        <i class="fa fa-bug"></i> Bug_Tracker Login
                     </span>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
